--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta content="/meta.gif" property="og:image" />
 
-    <link type="application/json+oembed" href="/meta.json" />
+    <link type="application/json+oembed" href="https://lmao.ninja/meta.json" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="theme-color" content="#303136" />
     <!-- <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
